--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "timer",
   "version": "0.1.0",
   "private": false,
-  "homepage":"https://NeoPrint3D.github.io/timer",
+  "homepage": "https://NeoPrint3D.github.io/timer",
   "dependencies": {
     "@craco/craco": "^6.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^10.0.0",
     "firebase": "^9.2.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
