--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "timer-new",
   "private": true,
+  "homepage": "https://NeoPrint3D.github.io/timer/#",
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,12 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "firebase": "^9.4.1",
+    "gh-pages": "^3.2.3",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwind": "^2.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.8",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
